# sandbox-cmake-cpp-libshapes

./: .gitignore  .ls-lint.yml  CITATION.cff  CMakeLists.txt  README.dev.md  README.md  addition.cpp  addition.hpp  calculator.cpp  main.cpp  main.hpp  subtraction.cpp  subtraction.hpp
libshapes/round/: circle.hpp  circle.test.cpp
